ck.university.diploma.csm

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,27 +1,21 @@
+@import be.objectify.deadbolt.java.views.html._
+@import be.objectify.deadbolt.core.utils.TemplateUtils._
 
-@main(Messages("playauthenticate.index.title")) {
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>@Messages("playauthenticate.index.intro")</h1>
-        <p>@Messages("playauthenticate.index.intro_2") <br/>@Messages("playauthenticate.index.intro_3")</p>
-      </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>@Messages("playauthenticate.index.heading")</h2>
-           <p>Cupcake ipsum dolor sit amet. Pastry pie powder biscuit bear claw. Jelly-o chocolate bar sweet roll sugar plum chocolate. Biscuit brownie chupa chups macaroon ice cream halvah sugar plum oat cake ice cream.</p>
-          <p><a class="btn" href="#">@Messages("playauthenticate.index.details") &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Applicake macaroon caramels gummi bears pastry. Cake liquorice carrot cake chocolate lollipop dessert. Halvah fruitcake marshmallow pie gummi bears pie marzipan.</p>
-          <p><a class="btn" href="#">@Messages("playauthenticate.index.details") &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Wafer halvah jujubes lollipop liquorice jelly-o pastry. Pie halvah toffee. Candy canes donut sugar plum. Chocolate cake powder tart liquorice cotton candy pudding sweet.</p>
-          <p><a class="btn" href="#">@Messages("playauthenticate.index.details") &raquo;</a></p>
-        </div>
-      </div>
-    }
+@main(Messages("page.home.title")) {
+	<div class="panel panel-info">
+    <div class="panel-heading">
+      <h3 class="panel-title">@Messages("page.home.title")</h3>
+    </div>
+    <div class="panel-body">
+    	
+    	@_mySession()
+    	
+    	<p>@Messages("page.home.description_1")</p>
+    	@subjectNotPresent() {
+    		<p>@Messages("page.home.description_2")</p>
+    		<p>@Messages("page.home.description_3")</p>
+    	}
+    	
+    </div>
+  </div>
+}
