--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,72 +10,97 @@
 
     <!-- Le meta -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Play Authenticate - an authentication module for the Play! Framework 2.0">
-    <meta name="author" content="The Play Authenticate Team">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Readout. Consumer Service Manager.">
+    <meta name="author" content="Bagachuk Olexandr. Mankivka. Cherkasy region.">
 
     <!-- Le scripts -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
-	<script src="@ck.university.diploma.csm.controllers.routes.Application.jsRoutes" defer="defer"></script>
+    <script src='@routes.Assets.at("js/jquery-1.11.0.js")'></script>
+    <script src='@routes.Assets.at("js/bootstrap.min.js")'></script>
+    <script src="@ck.university.diploma.csm.controllers.routes.Application.jsRoutes" defer="defer"></script>
 
     <!-- Le styles -->
-    <link href="@routes.Assets.at("css/main.css")" rel="stylesheet">
-    <link href="@routes.Assets.at("css/bootstrap.min.css")" rel="stylesheet">
+    <link href='@routes.Assets.at("css/style.css")' rel="stylesheet">
+    <link href='@routes.Assets.at("css/bootstrap.min.css")' rel="stylesheet">
+    <link href='@routes.Assets.at("css/modern-business.css")' rel="stylesheet">
 
+    <!-- Custom Fonts -->
+    <link href='@routes.Assets.at("font-awesome-4.1.0/css/font-awesome.min.css")' rel="stylesheet" type="text/css">
+    
+    <!-- The main icon -->
+    <link href='@routes.Assets.at("images/favicon.png")' rel="shortcut icon" type="image/png">
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
   </head>
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="@ck.university.diploma.csm.controllers.routes.Application.index()">Play! Authenticate</a>
-
-          <div class="btn-group pull-right">
-          @subjectPresentOr() {
-          	@defining(ck.university.diploma.csm.controllers.Application.getLocalUser(session())) { user =>
-            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              <i class="icon-user"></i> @user.name
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a href="@ck.university.diploma.csm.controllers.routes.Application.profile()">@Messages("playauthenticate.navigation.profile")</a></li>
-              <li><a href="@ck.university.diploma.csm.controllers.routes.Account.link()">@Messages("playauthenticate.navigation.link_more")</a></li>
-              <li class="divider"></li>
-              <li><a href="@com.feth.play.module.pa.controllers.routes.Authenticate.logout()"><i class="icon-off"></i> @Messages("playauthenticate.navigation.logout")</a></li>
-            </ul>
-            }
-          }{
-            <a href="@ck.university.diploma.csm.controllers.routes.Application.login()" class="btn btn-primary btn-mini @("disabled".when(nav == "login"))">@Messages("playauthenticate.navigation.login")</a>
-          }
-          </div>
-
-
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="@("active".when(nav == ""))"><a href="@ck.university.diploma.csm.controllers.routes.Application.index()">@Messages("playauthenticate.navigation.home")</a></li>
-              <li class="@("active".when(nav == "restricted"))"><a href="@ck.university.diploma.csm.controllers.routes.Application.restricted()">@Messages("playauthenticate.navigation.restricted")</a></li>
-
-                @subjectNotPresent() {
-			    	<li class="@("active".when(nav == "signup"))"><a href="@ck.university.diploma.csm.controllers.routes.Application.signup()">@Messages("playauthenticate.navigation.signup")</a></li>
-			    }
-            </ul>
-          </div><!--/.nav-collapse -->
+          </button>
+          <a class="navbar-brand" href="@ck.university.diploma.csm.controllers.routes.Application.index()">@Messages("page.home.title")</a>
         </div>
-      </div>
-    </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="@ck.university.diploma.csm.controllers.routes.Application.index()">@Messages("playauthenticate.navigation.home")</a>
+            </li>
+            <li>
+              <a href="@ck.university.diploma.csm.controllers.routes.Application.restricted()">@Messages("playauthenticate.navigation.restricted")</a>
+            </li>
+            <li>
+              <a href="@ck.university.diploma.csm.controllers.routes.Application.about()">@Messages("page.home.about")</a>
+            </li>
+            @subjectNotPresent() {
+              <li class="@("active".when(nav == "signup"))">
+                <a href="@ck.university.diploma.csm.controllers.routes.Application.signup()">@Messages("playauthenticate.navigation.signup")</a>
+              </li>
+            }
+            <li class="dropdown">
+              @subjectPresentOr() {
+                @defining(ck.university.diploma.csm.controllers.Application.getLocalUser(session())) { user =>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">@user.getName() <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="@ck.university.diploma.csm.controllers.routes.Application.profile()">@Messages("playauthenticate.navigation.profile")</a>
+                    </li>
+                    <li>
+                      <a href="@ck.university.diploma.csm.controllers.routes.Account.link()">@Messages("playauthenticate.navigation.link_more")</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                      <a href="@com.feth.play.module.pa.controllers.routes.Authenticate.logout()"><i class="icon-off"></i> @Messages("playauthenticate.navigation.logout")</a>
+                    </li>
+                  </ul>
+                }
+              }{
+                <a href="@ck.university.diploma.csm.controllers.routes.Application.login()">@Messages("playauthenticate.navigation.login")</a>
+              }
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav>
+    
+    <div class="container">
+      <div class="main">@content</div>
+    </div>    
 
     <div class="container">
 	    @if(flash.contains(ck.university.diploma.csm.controllers.Application.FLASH_ERROR_KEY)) {
@@ -88,16 +113,20 @@
 	      	@flash().get(ck.university.diploma.csm.controllers.Application.FLASH_MESSAGE_KEY)
 	      </div>
 	    }
-		@content
 
     <hr>
 
-      <footer>
-        <p>&copy; 2012-2014 Play! Authenticate. Licensed under Apache License, Version 2.0. View details <a href="https://github.com/joscha/play-authenticate/blob/master/LICENSE">here</a>.</p>
-        <p>
-        <small>Styles by <a href="http://twitter.github.com/bootstrap/index.html" target="_blank">Twitter Bootstrap</a> &middot; Provider icons by <a href="https://github.com/paulrobertlloyd/socialmediaicons/" target="_blank">Paul Robert Lloyd</a></small></p>
-      </footer>
+    <footer>
+      <div class="row">
+        <div class="col-lg-12">
+          <nav class="navbar navbar-default navbar-static-bottom" role="navigation">
+      	    <p class="navbar-text">&copy; @Messages("page.home.copyright") for @Messages("page.home.name") build @Messages("page.home.created") v.@Messages("page.home.version")</p>
+      	    <p class="navbar-text navbar-right"><a href="#">MySQL Support</a></p>
+      	  </nav>
+        </div>
+      </div>
+    </footer>
     </div> <!-- /container -->
-
+    
   </body>
 </html>
