--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -98,6 +98,49 @@
       </div><!-- /.container -->
     </nav>
     
+    <!-- Header Carousel -->
+    <div id="slider" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#slider" data-slide-to="0" class="active"></li>
+        <li data-target="#slider" data-slide-to="1"></li>
+        <li data-target="#slider" data-slide-to="2"></li>
+      </ol>
+      
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src='@routes.Assets.at("images/110720081456.jpg")' alt="РЕМ, виноград" class="img-responsive"/>
+          <div class="carousel-caption">
+            <h1>@Messages("carousel.title.0") @Messages("page.home.title")</h1>
+            <p><a class="btn btn-sm btn-info" href="@ck.university.diploma.csm.controllers.routes.Application.signup()" role="button">@Messages("carousel.button.0")</a></p>
+          </div>
+        </div>
+        <div class="item">
+          <img src='@routes.Assets.at("images/110720081457.jpg")' alt="РЕМ, спереду" class="img-responsive"/>
+          <div class="carousel-caption">
+            <h1>@Messages("carousel.title.1") @Messages("page.home.title.abbr")</h1>
+            <p><a class="btn btn-sm btn-info" href="#" role="button">@Messages("carousel.button.1")</a></p>
+          </div>
+        </div>
+        <div class="item">
+          <img src='@routes.Assets.at("images/110720081459.jpg")' alt="РЕМ, Діана" class="img-responsive"/>
+          <div class="carousel-caption">
+            <h1>@Messages("carousel.title.2")</h1>
+            <p><a class="btn btn-sm btn-info" href="#" role="button">@Messages("carousel.button.2")</a></p>
+          </div>
+        </div>
+      </div>
+      
+      <!-- Controls -->
+      <a class="left carousel-control" href="#slider" data-slide="prev">
+        <span class="icon-prev"></span>
+      </a>
+      <a class="right carousel-control" href="#slider" data-slide="next">
+        <span class="icon-next"></span>
+      </a>
+    </div>
+    
     <div class="container">
       <div class="main">@content</div>
     </div>    
